--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
     <application
-        android:name="de.ctiedt.studypoints"
+        android:name="io.flutter.app.FlutterApplication"
         android:label="StudyPoints"
         android:icon="@drawable/icon">
         <activity
